trying to fix overflow

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -5,6 +5,7 @@
   border: 4px white solid;
   border-radius: 16px;
   background-color: rgb(0, 0, 0, 0.7);
+  overflow-x: hidden;
 }
 
 .ProfilePic {
